# Qb1t6

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  qb1t6.cpp
.github/workflows/: build-actions.yml  build-docs.yml  build-test-install.yml  clear-branches.yml
cmake/: FindQt.cmake
doc/: CMakeLists.txt
include/encoding/: qb1t6.hpp
tests/: CMakeLists.txt  tip5.cpp
