find_package(Doxygen REQUIRED)


if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
	set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/doc")
else()
	set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/doc/html/${PROJECT_NAME}")
endif()
set(DOXYGEN_GENERATE_TAGFILE "${PROJECT_NAME}.tag")
set(DOXYGEN_TAGFILES "${GLOBAL_DOXYGEN_TAGS}")
doxygen_add_docs(
	doxygen_${PROJECT_NAME}
	${PROJECT_SOURCE_DIR}
	ALL
	COMMENT "Generate man pages"
	)

list(APPEND GLOBAL_DOXYGEN_TAGS "${PROJECT_NAME}.tag=${CMAKE_SOURCE_DIR}/doc/html/${PROJECT_NAME}/")

message(STATUS "Current doxigen tags are  ${GLOBAL_DOXYGEN_TAGS}")
set(GLOBAL_DOXYGEN_TAGS ${GLOBAL_DOXYGEN_TAGS}  CACHE STRING "" FORCE)
mark_as_advanced(GLOBAL_DOXYGEN_TAGS)
