

if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
	find_package(Doxygen REQUIRED)
	set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/doc")
	doxygen_add_docs(
		doxygen_${PROJECT_NAME}
		${DOC_SOURCE_DIRS}
		${PROJECT_SOURCE_DIR}
		ALL
		COMMENT "Generate man pages"
		)
else()
	list(APPEND DOC_SOURCE_DIRS ${PROJECT_SOURCE_DIR})
	list(REMOVE_DUPLICATES ${DOC_SOURCE_DIRS})
	set(DOC_SOURCE_DIRS ${DOC_SOURCE_DIRS}  CACHE STRING "" FORCE)
	mark_as_advanced(DOC_SOURCE_DIRS)
endif()

	message(STATUS "DOC_SOURCE_DIRS='${DOC_SOURCE_DIRS}'")
